Tools alignment styling fixes

--- a/hyper/src/assets/scss/custom/pages/_screener.scss
+++ b/hyper/src/assets/scss/custom/pages/_screener.scss
@@ -11,4 +11,10 @@
     label {
         margin-bottom: 0px;
     }
+    .custom-control-inline {
+        margin-left: 10px;
+    }
+}
+.row-bottom-margin {
+    margin-bottom: 20px;
 }
